--- a/src/main/webapp/Kasse.html
+++ b/src/main/webapp/Kasse.html
@@ -12,6 +12,7 @@
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
     <link type="text/css" rel="stylesheet" href="Kasse.css">
+    <link type="text/css" rel="stylesheet" href="bootstrap.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
@@ -23,6 +24,15 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <style type="text/css">
+		body {
+        	padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      	}
+    </style>
+    
+    
     <script type="text/javascript" language="javascript" src="kasse/kasse.nocache.js"></script>
   </head>
 
@@ -42,6 +52,6 @@
         Your web browser must have JavaScript enabled
         in order for this application to display correctly.
       </div>
-    </noscript>
+    </noscript>    
   </body>
 </html>
