--- a/src/main/webapp/Kasse.html
+++ b/src/main/webapp/Kasse.html
@@ -7,7 +7,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-
+	<meta name="gwt:property" content="locale=de">
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
