should solve most of issue #6.
Added hibernate-entitymanager, hibernate-validator, slf4j, logback
and guice-persist dependencies.

Implemented the generic CRUD dao classes.

Fixed minor HTML error.

--- a/src/main/webapp/Kasse.html
+++ b/src/main/webapp/Kasse.html
@@ -33,7 +33,7 @@
     </style>
     
     
-    <script type="text/javascript" language="javascript" src="kasse/kasse.nocache.js"></script>
+    <script type="text/javascript" src="kasse/kasse.nocache.js"></script>
   </head>
 
   <!--                                           -->
