checkout with printing @css: lmaa!!

--- a/src/main/webapp/Kasse.html
+++ b/src/main/webapp/Kasse.html
@@ -13,6 +13,7 @@
     <!--                                                               -->
     <link type="text/css" rel="stylesheet" href="Kasse.css">
     <link type="text/css" rel="stylesheet" href="bootstrap.css">
+    <link type="text/css" rel="stylesheet" href="print.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
